# comsWasmBook

./: .gitignore  0_env.md  10_inter_contract.md  11_subMessage_contract.md  12_cw_plus.md  1_create_project.md  2_entrypoint.md  3_creating_query.md  3_instantiate.md  4_creating_query.md  5_query_entrypoint.md  6_contract_state.md  7_execute_enterpoint.md  8_contract_event.md  9_contract_funds_send.md  README.md
cw20-labs/init/init/: Cargo.toml
cw20-labs/init/jsDev/: 1_storecode.js  package-lock.json
cw20-labs/js_submessage/: 11_storecode_addr.js  12_instantiate_addr.js  13_execute_increment.js  14_execute_reset.js  15_query_getCount.js  21_storecode_end.js  22_instantiate_end.js  23_execute_right.js  24_execute_wrong.js  31_storecode_mange.js  32_instantiate_mange.js  33_execute_right.js  34_execute_wrong.js  config.js  package.json
cw20-labs/mint/jsDev/: 4_execute_mint_for_wallet2.js  5_execute_mint_for_wallet1.js  6_execute_mint_for_sc.js  7_execute_burn_for_sc.js  config.js  package.json
cw20-labs/mint/mintSc/: Cargo.toml
cw20-labs/sub_message_addr/: Cargo.toml
cw20-labs/sub_message_addr/src/: contract.rs  msg.rs
cw20-labs/sub_message_end/: Cargo.toml
cw20-labs/sub_message_end/src/: lib.rs
cw20-labs/sub_message_mange/: Cargo.toml
cw20-labs/sub_message_mange/src/: contract.rs  lib.rs  msg.rs
cw20-labs/submessage/: Cargo.toml
cw20-labs/submessage/token_manage/: Cargo.toml
cw20-sample/init/src/: contract.rs  msg.rs
cw20-sample/jsDev/: 0_getBalance.js  2_instantiate.js  3_query_admin.js  config.js  scTools.js
osmosis/: 0_sendOsmo.js  1_tokenFactory_createDenom.js  2_tokenFactory_mint.js  3_token_factory_check_tokenMetadata.js  4_wasm_storecode.js  5_wasm_instantiate.js  6_wasm_execute_increment.js  7_wasm_query.js  8_cosmWasmClient_about_scanBlock.js  package-lock.json  package.json
sample/base/: Cargo.toml
sample/base/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
sample/base_0/jsDevOps/: instantiate.js  scTools.js  storecode.js  (+1 more)
sample/cw20Js/: 1_storecode.js  2_instantiate.js  3_query_cw20.js  4_exec_cw20.js  config.js  scTools.js
sample/dealfunds/exeSc/: Cargo.toml
sample/dealfunds/exeSc/src/: contract.rs  error.rs
sample/token_manager/: Cargo.toml
(+73 files in other folders)
