[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[package.metadata.scripts]
opti = """sudo docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.14.0
"""

[dependencies]
cosmwasm-std = { version = "1.3.2", features = ["staking"] }
cw-storage-plus = "1.1.0"

serde = { version = "1.0.103", default-features = false, features = ["derive"] }
