[package]
name = "exeSc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.scripts]
opti = """sudo docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.14.0
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = "1.4.0"
cosmwasm-std = "1.3.3"
cosmwasm-storage = "1.3.3"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.1"
schemars = "0.8.13"
serde = "1.0.188"
thiserror = "1.0.47"
